--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 🏗 Checkout code
         uses: actions/checkout@v4
 
-      - name: Check if version has changed
+      - name: 🔖 Check if version has changed
         id: check_version
         run: |
           VERSION=$(grep -oP "Version:\s*\K\d+(\.\d+)*(-\w+)?(\.\d+)?" woocommerce-pos.php)
@@ -31,7 +31,7 @@ jobs:
             echo "::set-output name=release::true"
           fi
 
-      - name: Create Release
+      - name: 📦 Create Release
         if: steps.check_version.outputs.release == 'true'
         id: create_release
         uses: actions/create-release@v1
@@ -43,23 +43,27 @@ jobs:
           draft: true
           prerelease: ${{ contains(env.VERSION, '-beta') }}
 
-      - name: Build
+      - name: 🏗 Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: '10.6.5'
+
+      - name: 👷 Build
         if: steps.check_version.outputs.release == 'true'
-        env:
-          YARN_ENABLE_IMMUTABLE_INSTALLS: false
         run: |
-          yarn install
+          pnpm install
           composer prefix-dependencies
           composer install --no-dev
-          yarn build:js
+          pnpm settings build
+          pnpm analytics build
 
-      - name: Sync to Temporary Directory
+      - name: 📂 Sync to Temporary Directory
         if: steps.check_version.outputs.release == 'true'
         run: |
           mkdir temp_dir
           rsync -av --prune-empty-dirs --exclude-from='.distignore' ./ temp_dir/
       
-      - name: Compress and Upload ZIP
+      - name: 📦 Compress and Upload ZIP
         if: steps.check_version.outputs.release == 'true'
         run: |
           cd temp_dir
