--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "scripts": {
     "wp-env": "wp-env",
-    "start": "wp-env start --xdebug=debug --debug",
-    "stop": "wp-env stop",
-    "cli": "wp-env run cli",
-    "wp": "wp-env run cli wp",
     "lint:php": "composer run lint-report | cs2pr",
     "test": "pnpm run test:unit:php",
     "pretest": "wp-env start --xdebug=coverage && wp-env run cli --env-cwd='wp-content/plugins/woocommerce-pos' composer install",
     "test:unit:php": "wp-env run cli -- wp plugin activate woocommerce && wp-env run --env-cwd='wp-content/plugins/woocommerce-pos' tests-cli -- vendor/bin/phpunit -c .phpunit.xml.dist --verbose --log-junit phpunit.xml",
-    "build:docs": "jsdoc -c hookdoc-conf.json"
+    "build:docs": "jsdoc -c hookdoc-conf.json",
+    "settings": "pnpm --filter=@wcpos/settings",
+    "analytics": "pnpm --filter=@wcpos/analytics"
   },
   "repository": {
     "type": "git",
@@ -43,5 +41,5 @@
     "turbo": "2.4.4",
     "wp-hookdoc": "0.2.0"
   },
-  "packageManager": "pnpm@10.4.1"
+  "packageManager": "pnpm@10.6.5"
 }
