--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     ]
   },
   "scripts": {
+    "clean": "node scripts/clean-node-modules",
     "wp-env": "wp-env",
     "lint:php": "composer run lint-report | cs2pr",
     "test": "pnpm run test:unit:php",
