--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -5,9 +5,9 @@
     "start": "node_modules/.bin/webpack --watch"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.2.0",
     "@headlessui/tailwindcss": "^0.2.1",
-    "@tanstack/react-query": "^5.45.0",
+    "@tanstack/react-query": "^5.90.7",
     "@transifex/native": "^7.1.1",
     "@transifex/react": "^7.1.1",
     "@wordpress/api-fetch": "7.0.0",
@@ -29,7 +29,8 @@
     "@babel/preset-typescript": "7.24.7",
     "@babel/runtime": "7.24.7",
     "@svgr/webpack": "8.1.0",
-    "@tanstack/react-query-devtools": "^5.45.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@transifex/cli": "^7.1.1",
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.5",
@@ -59,7 +60,7 @@
     "prettier": "3.3.2",
     "sass-loader": "14.2.1",
     "style-loader": "4.0.0",
-    "tailwindcss": "3.4.4",
+    "tailwindcss": "^4.0.0",
     "terser-webpack-plugin": "5.3.10",
     "ts-loader": "^9.5.1",
     "typescript": "5.4.5",
