--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -52,7 +52,7 @@
     "jest": "29.7.0",
     "jsdoc": "4.0.3",
     "mini-css-extract-plugin": "2.9.0",
-    "node-sass": "9.0.0",
+    "sass": "^1.84.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.38",
     "postcss-cli": "11.0.0",
