--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -32,12 +32,12 @@ jobs:
           mkdir -p deploy-staging
           
           # Copy files excluding build artifacts and source files
+          # NOTE: vendor/ is REQUIRED - it contains PHP classes loaded via composer
           rsync -av \
             --exclude='.git' \
             --exclude='.github' \
             --exclude='node_modules' \
             --exclude='packages/*/node_modules' \
-            --exclude='vendor' \
             --exclude='tests' \
             --exclude='.gitignore' \
             --exclude='.editorconfig' \
