ci: enhance test workflow with PHPStan and improved reporting
- Add PHPStan static analysis job (non-blocking initially)
- Add test result reporting to PR comments
- Add code coverage upload to Codecov
- Make PHPCS linting blocking (remove continue-on-error)
- Add PHP version matrix (7.4 and 8.1)
- Add phpstan and wordpress-stubs to composer dev dependencies

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
     "dealerdirect/phpcodesniffer-composer-installer": "v1.0.0",
     "friendsofphp/php-cs-fixer": "v3.35.1",
     "php-stubs/woocommerce-stubs": "v8.2.0",
+    "php-stubs/wordpress-stubs": "^6.4",
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
+    "phpstan/phpstan": "^1.10",
     "sirbrillig/phpcs-variable-analysis": "v2.11.17",
     "squizlabs/php_codesniffer": "3.7.2",
+    "szepeviktor/phpstan-wordpress": "^1.3",
     "woocommerce/woocommerce-sniffs": "1.0.0",
     "wp-coding-standards/wpcs": "3.0.1",
     "wp-phpunit/wp-phpunit": "6.3.1",
@@ -45,6 +48,7 @@
     "lint": "phpcs --standard=./.phpcs.xml.dist",
     "lint-report": "phpcs --standard=./.phpcs.xml.dist --report=checkstyle",
     "fix": "php-cs-fixer fix .",
+    "phpstan": "phpstan analyse --memory-limit=512M",
     "prefix-dependencies": [
       "composer --working-dir=php-scoper install",
       "cd php-scoper && vendor/bin/php-scoper add-prefix --output-dir=../vendor_prefixed --force && cd ..",
