--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -94,14 +94,31 @@ jobs:
         continue-on-error: true
 
   test:
-    name: Test (PHP ${{ matrix.php }})
+    name: Test (PHP ${{ matrix.php }}, WP ${{ matrix.wp }}, WC ${{ matrix.wc }})
     runs-on: ubuntu-latest
     needs: lint
+    # Allow experimental builds to fail without failing the whole workflow
+    continue-on-error: ${{ matrix.experimental || false }}
 
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.4', '8.1']
+        include:
+          # Minimum supported versions (must pass)
+          - php: '7.4'
+            wp: '5.6'
+            wc: '5.3.0'
+            experimental: false
+          # Current stable (must pass)
+          - php: '8.1'
+            wp: '6.5'
+            wc: '10.4.3'
+            experimental: false
+          # Latest/bleeding edge (informational - can fail)
+          - php: '8.3'
+            wp: 'latest'
+            wc: 'latest'
+            experimental: true
 
     steps:
       - name: Checkout code
@@ -145,11 +162,55 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
 
+      - name: Configure wp-env for matrix versions
+        run: |
+          # Set WordPress core version
+          if [ "${{ matrix.wp }}" = "latest" ]; then
+            WP_CORE="null"
+          else
+            WP_CORE="\"WordPress/WordPress#${{ matrix.wp }}\""
+          fi
+
+          # Set WooCommerce version URL
+          if [ "${{ matrix.wc }}" = "latest" ]; then
+            WC_URL="https://downloads.wordpress.org/plugin/woocommerce.zip"
+          else
+            WC_URL="https://downloads.wordpress.org/plugin/woocommerce.${{ matrix.wc }}.zip"
+          fi
+
+          # Update .wp-env.json with matrix versions
+          cat > .wp-env.json << EOF
+          {
+            "core": $WP_CORE,
+            "phpVersion": "${{ matrix.php }}",
+            "plugins": [
+              "$WC_URL",
+              "."
+            ],
+            "config": {
+              "WP_DEBUG": true,
+              "SCRIPT_DEBUG": true,
+              "WP_PHP_BINARY": "php",
+              "WP_TESTS_EMAIL": "admin@example.org",
+              "WP_TESTS_TITLE": "Test Blog",
+              "WP_TESTS_DOMAIN": "http://localhost",
+              "WP_SITEURL": "http://localhost",
+              "WP_HOME": "http://localhost"
+            },
+            "mappings": {}
+          }
+          EOF
+          echo "Testing with WP ${{ matrix.wp }}, WC ${{ matrix.wc }}, PHP ${{ matrix.php }}"
+          cat .wp-env.json
+
       - name: Start WordPress Environment
         run: pnpm run wp-env start --xdebug=coverage
 
-      - name: Check WooCommerce Activation
-        run: pnpm run wp-env run cli -- wp plugin list
+      - name: Check WordPress and WooCommerce versions
+        run: |
+          echo "=== Installed Versions ==="
+          pnpm run wp-env run cli -- wp core version
+          pnpm run wp-env run cli -- wp plugin list
 
       - name: Run PHPUnit tests
         run: pnpm run test
@@ -158,13 +219,13 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: phpunit-results-php${{ matrix.php }}
+          name: phpunit-results-php${{ matrix.php }}-wp${{ matrix.wp }}-wc${{ matrix.wc }}
           path: phpunit.xml
           retention-days: 7
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
-        if: matrix.php == '8.1'
+        if: matrix.php == '8.1' && matrix.experimental == false
         with:
           name: coverage-report
           path: coverage/
@@ -186,12 +247,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: phpunit-results-*
+          path: test-results
           merge-multiple: true
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "*.xml"
+          files: "test-results/**/*.xml"
           comment_mode: always
           check_name: PHPUnit Test Results
 
