--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -109,6 +109,11 @@ jobs:
             wp: '5.6'
             wc: '5.3.0'
             experimental: false
+          # Previous major versions (must pass)
+          - php: '8.0'
+            wp: '6.4'
+            wc: '9.9.6'
+            experimental: false
           # Current stable (must pass)
           - php: '8.1'
             wp: '6.5'
