--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,13 +105,14 @@ jobs:
       matrix:
         include:
           # Minimum PHP with current WC (must pass)
+          # Note: WC 10.x requires WP 6.8+
           - php: '7.4'
-            wp: '6.4'
+            wp: '6.8'
             wc: '10.4.3'
             experimental: false
           # Current stable (must pass)
           - php: '8.1'
-            wp: '6.5'
+            wp: '6.8'
             wc: '10.4.3'
             experimental: false
           # Latest/bleeding edge (informational - can fail)
