chore: keep conservative code coverage target
Keep target at 50% with informational: true since:
- Tests are primarily functional/integration tests via REST API dispatch
- Actual line coverage is low (~1.3%) despite 464 functional tests
- Coverage tooling doesn't capture all code paths during REST integration tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -11,7 +11,7 @@ coverage:
       default:
         # Don't fail the build if coverage drops
         informational: true
-        # Target coverage threshold (start low, increase over time)
+        # Target coverage threshold (realistic for integration-style tests)
         target: 50%
         # Allow coverage to drop by up to 5%
         threshold: 5%
