fix: address CodeRabbit review suggestions
CI/Workflow improvements:
- Make WP ready check fail fast if WordPress doesn't start (e2e-api, e2e-ui)
- Add continue-on-error for coverage artifact download (prevents CI failures)
- Upgrade codecov-action v4 → v5
- Add flags: unittests for codecov carryforward

Code improvements:
- Fix Products.php post_type array handling (WP_Query can return array)
- Add type hints and PHPDoc return type to hide_pos_only_products()

Test cleanup:
- Remove unused $order1/$order2 variables (PHPMD warnings)
- Remove dead placeholder issue link from docblock

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -271,14 +271,18 @@ jobs:
 
       - name: Download coverage report
         uses: actions/download-artifact@v4
+        continue-on-error: true
+        id: download-coverage
         with:
           name: coverage-report
           path: coverage/
 
       - name: Upload to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
+        if: steps.download-coverage.outcome == 'success'
         with:
           files: coverage/clover.xml
+          flags: unittests
           fail_ci_if_error: false
           verbose: true
         env:
