--- a/.github/workflows/e2e-ui.yml
+++ b/.github/workflows/e2e-ui.yml
@@ -69,14 +69,20 @@ jobs:
 
       - name: Wait for WordPress to be ready
         run: |
+          ready=0
           for i in {1..30}; do
-            if curl -s http://localhost:8888/wp-json/ > /dev/null; then
+            if curl -sf http://localhost:8888/wp-json/ > /dev/null; then
               echo "WordPress is ready"
+              ready=1
               break
             fi
             echo "Waiting for WordPress... ($i/30)"
             sleep 2
           done
+          if [ "$ready" -ne 1 ]; then
+            echo "WordPress did not become ready in time"
+            exit 1
+          fi
 
       - name: Run Playwright tests
         run: npx playwright test --config=tests/e2e/ui/playwright.config.ts
