--- a/.github/workflows/e2e-api.yml
+++ b/.github/workflows/e2e-api.yml
@@ -64,19 +64,35 @@ jobs:
       - name: Wait for WordPress to be ready
         run: |
           ready=0
-          for i in {1..30}; do
-            if curl -sf http://localhost:8888/wp-json/ > /dev/null; then
-              echo "WordPress is ready"
-              ready=1
-              break
+          for i in {1..60}; do
+            # Check if Docker containers are running
+            if docker ps | grep -q wordpress; then
+              # Try to access WP CLI first (more reliable)
+              if pnpm run wp-env run cli -- wp core is-installed 2>/dev/null; then
+                echo "WordPress is ready"
+                ready=1
+                break
+              fi
             fi
-            echo "Waiting for WordPress... ($i/30)"
+            echo "Waiting for WordPress... ($i/60)"
             sleep 2
           done
           if [ "$ready" -ne 1 ]; then
             echo "WordPress did not become ready in time"
+            docker ps
+            pnpm run wp-env logs || true
             exit 1
           fi
+
+      - name: Configure WordPress for API tests
+        run: |
+          # Set permalinks to enable REST API
+          pnpm run wp-env run cli -- wp rewrite structure '/%postname%/' --hard
+          pnpm run wp-env run cli -- wp rewrite flush --hard
+          # Ensure plugins are active
+          pnpm run wp-env run cli -- wp plugin activate woocommerce woocommerce-pos
+          # Verify REST API is accessible
+          curl -sf http://localhost:8888/wp-json/ | head -c 200
 
       - name: Create test product
         run: |
@@ -86,10 +102,31 @@ jobs:
             --sku="TEST-001" \
             --user=admin
 
+      - name: Generate JWT token for API tests
+        run: |
+          # Generate JWT token using wp eval
+          JWT_TOKEN=$(pnpm run wp-env run cli -- wp eval '
+            $auth = \WCPOS\WooCommercePOS\Services\Auth::instance();
+            $user = get_user_by("login", "admin");
+            $tokens = $auth->generate_token_pair($user);
+            echo $tokens["access_token"];
+          ')
+          echo "JWT_TOKEN=$JWT_TOKEN" >> $GITHUB_ENV
+          
+          REFRESH_TOKEN=$(pnpm run wp-env run cli -- wp eval '
+            $auth = \WCPOS\WooCommercePOS\Services\Auth::instance();
+            $user = get_user_by("login", "admin");
+            $tokens = $auth->generate_token_pair($user);
+            echo $tokens["refresh_token"];
+          ')
+          echo "REFRESH_TOKEN=$REFRESH_TOKEN" >> $GITHUB_ENV
+
       - name: Run Newman API tests
         run: |
           npx newman run tests/e2e/api/wcpos-api.postman_collection.json \
             --environment tests/e2e/api/environment.json \
+            --env-var "jwt_token=$JWT_TOKEN" \
+            --env-var "refresh_token=$REFRESH_TOKEN" \
             --reporters cli,junit \
             --reporter-junit-export newman-results.xml
 
