--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "homepage": "https://wcpos.com",
   "devDependencies": {
+    "@playwright/test": "^1.50.0",
     "@wordpress/babel-plugin-makepot": "6.23.0",
     "@wordpress/env": "10.23.0",
     "jsdoc": "^4.0.3",
+    "newman": "^6.2.1",
     "turbo": "2.4.4",
     "wp-hookdoc": "0.2.0"
   },
