fix: test failures and improve test matrix
Unit test fix:
- Fix test_get_items_with_invalid_type to expect 400 (was incorrectly expecting 200)

E2E API fix:
- Create generate-jwt.php file to avoid shell escaping issues with PHP namespaces
- Use wp eval-file instead of inline wp eval

E2E UI fixes:
- Fix plugin-activation test locator to target top-level menu only
- Simplify settings-page tests to be less dependent on React app internals

Test matrix improvements:
- Implement true 3x3x3 matrix: PHP (8.1, 8.2, 8.3) x WP (6.6, 6.7, latest) x WC (9.5.2, 10.4.3, latest)
- Exclude invalid combinations (WC 10.x requires WP 6.8+)
- Mark bleeding edge combinations as experimental

--- a/.github/workflows/e2e-api.yml
+++ b/.github/workflows/e2e-api.yml
@@ -104,13 +104,8 @@ jobs:
 
       - name: Generate JWT token for API tests
         run: |
-          # Generate JWT tokens using wp eval (escape backslashes for shell)
-          TOKENS=$(pnpm run wp-env run cli -- wp eval '
-            $auth = \\WCPOS\\WooCommercePOS\\Services\\Auth::instance();
-            $user = get_user_by("login", "admin");
-            $tokens = $auth->generate_token_pair($user);
-            echo json_encode($tokens);
-          ')
+          # Generate JWT tokens using PHP file (avoids shell escaping issues)
+          TOKENS=$(pnpm run wp-env run cli -- wp eval-file wp-content/plugins/woocommerce-pos/tests/e2e/api/generate-jwt.php)
           # Extract tokens from JSON output (skip pnpm output lines)
           TOKENS_JSON=$(echo "$TOKENS" | grep -o '{.*}')
           JWT_TOKEN=$(echo "$TOKENS_JSON" | jq -r '.access_token')
