--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,19 +103,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # 3x3x3 matrix: PHP (previous, stable, bleeding) x WP x WC
+        # Note: WC 10.x requires WP 6.8+, WC 9.x requires WP 6.6+
+        php: ['8.1', '8.2', '8.3']
+        wp: ['6.6', '6.7', 'latest']
+        wc: ['9.5.2', '10.4.3', 'latest']
+        experimental: [false]
+        exclude:
+          # WC 10.x requires WP 6.8+, so exclude WC 10.x with older WP
+          - wp: '6.6'
+            wc: '10.4.3'
+          - wp: '6.6'
+            wc: 'latest'
+          - wp: '6.7'
+            wc: '10.4.3'
+          - wp: '6.7'
+            wc: 'latest'
         include:
-          # Minimum PHP with current WC (must pass)
-          # Note: WC 10.x requires WP 6.8+
-          - php: '7.4'
-            wp: '6.8'
-            wc: '10.4.3'
-            experimental: false
-          # Current stable (must pass)
-          - php: '8.1'
-            wp: '6.8'
-            wc: '10.4.3'
-            experimental: false
-          # Latest/bleeding edge (informational - can fail)
+          # Mark bleeding edge combinations as experimental (allowed to fail)
           - php: '8.3'
             wp: 'latest'
             wc: 'latest'
