--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -93,18 +93,34 @@ jobs:
         run: composer run phpstan
         continue-on-error: true
 
-  # Smoke test - runs first on stable config to fail fast
+  # Smoke test - runs first on current stable versions to fail fast
+  # Uses latest WP + WC to test what most users actually have
   smoke-test:
-    name: Smoke Test (PHP 8.2, WP 6.7, WC 9.5.2)
+    name: Smoke Test (Latest Stable)
     runs-on: ubuntu-latest
     needs: lint
 
     outputs:
       success: ${{ steps.test.outcome == 'success' }}
+      wp_version: ${{ steps.versions.outputs.wp }}
+      wc_version: ${{ steps.versions.outputs.wc }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Get latest stable versions
+        id: versions
+        run: |
+          # Get latest WordPress version
+          WP_VERSION=$(curl -s https://api.wordpress.org/core/version-check/1.7/ | jq -r '.offers[0].version')
+          echo "wp=$WP_VERSION" >> $GITHUB_OUTPUT
+          echo "Latest WordPress: $WP_VERSION"
+          
+          # Get latest WooCommerce version
+          WC_VERSION=$(curl -s https://api.wordpress.org/plugins/info/1.2/?action=plugin_information&slug=woocommerce | jq -r '.version')
+          echo "wc=$WC_VERSION" >> $GITHUB_OUTPUT
+          echo "Latest WooCommerce: $WC_VERSION"
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -143,9 +159,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-wp-php8.2-${{ github.sha }}
+          key: ${{ runner.os }}-docker-wp-latest-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-docker-wp-php8.2-
+            ${{ runner.os }}-docker-wp-latest-
 
       - name: Install Node dependencies
         run: pnpm install
@@ -156,14 +172,15 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
 
-      - name: Configure wp-env
+      - name: Configure wp-env with latest versions
         run: |
-          cat > .wp-env.json << 'EOF'
+          # Use latest stable versions (null = latest WordPress)
+          cat > .wp-env.json << EOF
           {
-            "core": "WordPress/WordPress#6.7",
+            "core": null,
             "phpVersion": "8.2",
             "plugins": [
-              "https://downloads.wordpress.org/plugin/woocommerce.9.5.2.zip",
+              "https://downloads.wordpress.org/plugin/woocommerce.zip",
               "."
             ],
             "config": {
@@ -176,6 +193,7 @@ jobs:
             "mappings": {}
           }
           EOF
+          echo "Smoke test using WP ${{ steps.versions.outputs.wp }}, WC ${{ steps.versions.outputs.wc }}"
 
       - name: Start WordPress Environment
         run: pnpm run wp-env start
@@ -198,8 +216,10 @@ jobs:
           path: phpunit.xml
           retention-days: 7
 
-  # Full matrix - only runs if smoke test passes
-  # On PRs and main: run full 3x3x3 matrix
+  # Full matrix - tests compatibility with older supported versions
+  # Smoke test covers latest; matrix covers regression on older versions
+  # Version config documented in .github/test-matrix.json
+  # On PRs and main: run full matrix
   # On feature branches: skip (smoke test is sufficient)
   test-matrix:
     name: Test (PHP ${{ matrix.php }}, WP ${{ matrix.wp }}, WC ${{ matrix.wc }})
@@ -212,14 +232,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # 3x3x3 matrix: PHP x WP x WC
-        # Note: WC 10.x requires WP 6.8+, WC 9.x works with WP 6.6+
+        # Version matrix - update these when new versions release
+        # See .github/test-matrix.json for version policy
+        # PHP: previous (8.1), stable (8.2), bleeding (8.3)
+        # WP:  previous (6.6), stable (6.7), bleeding (latest)
+        # WC:  previous (9.5.2), stable (10.4.3), bleeding (latest)
         php: ['8.1', '8.2', '8.3']
         wp: ['6.6', '6.7', 'latest']
         wc: ['9.5.2', '10.4.3', 'latest']
         experimental: [false]
         exclude:
-          # WC 10.x requires WP 6.8+
+          # WC 10.x requires WP 6.8+ (check .github/test-matrix.json for compatibility rules)
           - wp: '6.6'
             wc: '10.4.3'
           - wp: '6.6'
@@ -228,12 +251,8 @@ jobs:
             wc: '10.4.3'
           - wp: '6.7'
             wc: 'latest'
-          # Skip the smoke test configuration (already ran)
-          - php: '8.2'
-            wp: '6.7'
-            wc: '9.5.2'
         include:
-          # Mark bleeding edge as experimental
+          # Mark bleeding edge as experimental (allowed to fail)
           - php: '8.3'
             wp: 'latest'
             wc: 'latest'
@@ -351,9 +370,9 @@ jobs:
           path: phpunit.xml
           retention-days: 7
 
-  # Coverage job - runs separately with Xdebug
+  # Coverage job - runs separately with Xdebug on latest stable versions
   coverage:
-    name: Code Coverage
+    name: Code Coverage (WP ${{ needs.smoke-test.outputs.wp_version }}, WC ${{ needs.smoke-test.outputs.wc_version }})
     runs-on: ubuntu-latest
     needs: smoke-test
     if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
@@ -400,14 +419,15 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
 
-      - name: Configure wp-env
+      - name: Configure wp-env with latest versions
         run: |
+          # Use latest stable versions (same as smoke test)
           cat > .wp-env.json << 'EOF'
           {
-            "core": "WordPress/WordPress#6.7",
+            "core": null,
             "phpVersion": "8.2",
             "plugins": [
-              "https://downloads.wordpress.org/plugin/woocommerce.9.5.2.zip",
+              "https://downloads.wordpress.org/plugin/woocommerce.zip",
               "."
             ],
             "config": {
@@ -420,6 +440,7 @@ jobs:
             "mappings": {}
           }
           EOF
+          echo "Coverage using WP ${{ needs.smoke-test.outputs.wp_version }}, WC ${{ needs.smoke-test.outputs.wc_version }}"
 
       - name: Start WordPress Environment with Xdebug
         run: pnpm run wp-env start --xdebug=coverage
