--- a/.github/workflows/e2e-api.yml
+++ b/.github/workflows/e2e-api.yml
@@ -86,13 +86,37 @@ jobs:
 
       - name: Configure WordPress for API tests
         run: |
-          # Set permalinks to enable REST API
-          pnpm run wp-env run cli -- wp rewrite structure '/%postname%/' --hard
-          pnpm run wp-env run cli -- wp rewrite flush --hard
           # Ensure plugins are active
           pnpm run wp-env run cli -- wp plugin activate woocommerce woocommerce-pos
-          # Verify REST API is accessible
-          curl -sf http://localhost:8888/wp-json/ | head -c 200
+          
+          # Create .htaccess with Authorization header passthrough
+          # Apache CGI/FastCGI strips Authorization header by default
+          pnpm run wp-env run wordpress -- bash -c 'cat > /var/www/html/.htaccess << EOF
+          # Pass Authorization header to PHP
+          SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=\$1
+
+          # BEGIN WordPress
+          <IfModule mod_rewrite.c>
+          RewriteEngine On
+          RewriteBase /
+          RewriteRule ^index\.php$ - [L]
+          RewriteCond %{REQUEST_FILENAME} !-f
+          RewriteCond %{REQUEST_FILENAME} !-d
+          RewriteRule . /index.php [L]
+          </IfModule>
+          # END WordPress
+          EOF'
+          
+          # Verify .htaccess was created
+          pnpm run wp-env run wordpress -- cat /var/www/html/.htaccess
+          
+          # Set permalinks structure (this regenerates .htaccess rules too)
+          pnpm run wp-env run cli -- wp rewrite structure '/%postname%/' --hard
+          pnpm run wp-env run cli -- wp rewrite flush --hard
+          
+          # Verify REST API is accessible with X-WCPOS header
+          curl -sf -H "X-WCPOS: 1" "http://localhost:8888/?rest_route=/" | jq '.namespaces | map(select(. == "wcpos/v1"))' || echo "Checking alternative..."
+          curl -sf -H "X-WCPOS: 1" http://localhost:8888/wp-json/wcpos/v1/ | head -c 200 || true
 
       - name: Create test product
         run: |
