fix: build JS assets in E2E UI workflow and restore proper tests
- Add 'pnpm --filter=@wcpos/settings build' step to build React app
- Restore proper tests that verify React app loads (not error fallback)
- Test now properly fails if settings.js isn't built/loaded

--- a/.github/workflows/e2e-ui.yml
+++ b/.github/workflows/e2e-ui.yml
@@ -60,6 +60,13 @@ jobs:
           composer prefix-dependencies
           composer install --prefer-dist --no-progress
 
+      - name: Build JS assets
+        run: |
+          # Build settings page React app
+          pnpm --filter=@wcpos/settings build
+          # Verify the built file exists
+          ls -la assets/js/settings.js || echo "Warning: settings.js not found in assets/"
+
       - name: Install Playwright browsers
         run: pnpm exec playwright install --with-deps chromium
 
