--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,7 +58,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHPCS
-        run: set -o pipefail; composer run lint-report 2>/dev/null | sed -n '/<?xml/,/<\/checkstyle>/p' | cs2pr
+        run: composer run lint-report 2>/dev/null | sed -n '/<?xml/,/<\/checkstyle>/p' | cs2pr
 
   static-analysis:
     name: Static Analysis (PHPStan)
