--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test:unit:js": "turbo run test",
     "build:docs": "jsdoc -c hookdoc-conf.json",
     "settings": "pnpm --filter=@wcpos/settings",
-    "analytics": "pnpm --filter=@wcpos/analytics",
-    "extract:translations": "node scripts/extract-js-strings.js"
+    "analytics": "pnpm --filter=@wcpos/analytics"
   },
   "repository": {
     "type": "git",
