--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@wcpos/settings",
   "scripts": {
-    "build": "NODE_ENV=production node_modules/.bin/webpack",
-    "start": "node_modules/.bin/webpack --watch",
-    "test": "jest"
+    "build": "vite build",
+    "dev": "vite build --watch --mode development",
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -22,55 +24,29 @@
     "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-transform-runtime": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "@babel/preset-typescript": "^7.28.5",
-    "@babel/runtime": "^7.28.4",
-    "@svgr/webpack": "8.1.0",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
-    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.2.3",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "@vitejs/plugin-react": "^4.0.0",
     "@wordpress/env": "^10.34.0",
-    "autoprefixer": "^10.4.22",
-    "babel-jest": "^30.2.0",
-    "babel-loader": "^10.0.0",
-    "css-loader": "7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "^9.1.0",
-    "html-webpack-plugin": "^5.6.4",
     "husky": "^9.1.7",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^26.0.0",
     "jsdoc": "^4.0.5",
-    "mini-css-extract-plugin": "^2.9.4",
     "npm-run-all": "4.1.5",
-    "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1",
-    "postcss-loader": "^8.2.0",
     "prettier": "^3.6.2",
-    "sass": "^1.84.0",
-    "sass-loader": "^16.0.6",
-    "style-loader": "4.0.0",
     "tailwindcss": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.14",
-    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "webpack": "^5.102.1",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.1",
-    "webpack-livereload-plugin": "3.0.2",
+    "vite": "^6.0.0",
+    "vite-plugin-svgr": "^4.0.0",
+    "vitest": "^3.0.0",
     "wp-hookdoc": "0.2.0"
   },
   "packageManager": "pnpm@10.4.1"
