feat: replace react-beautiful-dnd with pragmatic-drag-and-drop
Swap out the deprecated react-beautiful-dnd library for Atlassian's
pragmatic-drag-and-drop in the payment gateways table. Each row now
manages its own drag/drop lifecycle via useEffect refs, with edge
detection from the hitbox package providing visual drop indicators.
The reorder logic uses reorderWithEdge instead of the manual splice
helper.

--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -8,6 +8,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.1.0",
     "@headlessui/react": "^2.2.9",
     "@headlessui/tailwindcss": "^0.2.1",
     "@tanstack/react-query": "^5.90.7",
