chore: update JS dependencies across all packages
- i18n: i18next 24→25, react-i18next 15→16, i18next-chained-backend 4→5
- settings: vite 6→7, vitest 3→4, jsdom 26→28, @vitejs/plugin-react 4→5
- analytics: replace deprecated node-sass with sass (dart), update babel/webpack/typescript
- eslint: update typescript-eslint 7→8, eslint-plugin-jest 28→29, eslint 9.5→9.39
- root: update turbo, makepot
- all packages: switch pinned versions to caret ranges for better minor/patch resolution

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   "homepage": "https://wcpos.com",
   "devDependencies": {
     "@playwright/test": "^1.58.0",
-    "@wordpress/babel-plugin-makepot": "6.23.0",
+    "@wordpress/babel-plugin-makepot": "^6.39.0",
     "@wordpress/env": "10.38.0",
     "jsdoc": "^4.0.3",
     "newman": "^6.2.1",
     "taffydb": "^2.7.3",
     "glob": "^11.0.0",
-    "turbo": "2.4.4",
+    "turbo": "^2.8.7",
     "wp-hookdoc": "0.2.0"
   },
   "packageManager": "pnpm@10.8.0"
