--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -11,22 +11,22 @@
     "test": "echo 'Nothing to test'"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.10.3",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
+    "@rushstack/eslint-patch": "^1.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@wcpos/tsconfig": "*",
-    "eslint": "9.5.0",
+    "eslint": "^9.39.2",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-config-universe": "^13.0.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "28.6.0",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-react": "7.34.2",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-native": "4.1.0",
-    "prettier": "3.3.2",
-    "typescript": "^5.4.5"
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-config-universe": "^15.0.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.14.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
   }
 }
